@startuml

abstract class Objet {
    + aire() : double
    + perimetre() : double
    + afficheInfo() : void
}

class Rectangle {
    - largeur : double
    - longueur : double

    + Rectangle(l : double, lg : double)
    + getLargeur() : double
    + getLongueur() : double
    + aire() : double
    + perimetre() : double
    + afficheInfo() : void
}

class Carre {
    - cote : double

    + Carre(c : double)
    + getCote() : double
    + aire() : double
    + perimetre() : double
    + afficheInfo() : void
}

Objet <|-- Rectangle
Objet <|-- Carre

@enduml
